[workspace]
members = [
    'note/z_guessing_game',
    'note/y_variables',
    "note/n-rand-char",
    "feel/comfy-table",
    "feel/pest",
]

[workspace.dependencies]
rand = "0.8.5"
comfy-table = "6.1.4"
pest = "2.5.5"
pest_derive = "2.5.5"

# 所有的 cargo.toml 中，package-name 和 dependencies 中的相同
# cargo run -p package-name, eg: cargo run -p pest, 会出下如下错误：

# error: There are multiple `comfy-table` packages in your project, and the specification `comfy-table` is ambiguous.
# Please re-run this command with `-p <spec>` where `<spec>` is one of the following:
#   comfy-table@0.1.0
#   comfy-table@6.1.4

# error: There are multiple `pest` packages in your project, and the specification `pest` is ambiguous.
# Please re-run this command with `-p <spec>` where `<spec>` is one of the following:
#   pest@0.1.0
#   pest@2.5.5

# 使用 cargo run --bin bin-name 可以运行 eg: cargo run --bin pest
