[package]
name = "l-json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = { workspace = true }
pest_derive = { workspace = true }
comfy-table = "6.1.4"

[[example]]
name = "comfy_table"
path = "examples/comfy_table.rs"

[[example]]
name = "pest"
path = "examples/pest.rs"
