[package]
name = "comfy-table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comfy-table = { workspace = true }

[[example]]
name = "comfy-table"
path = "examples/comfy_table.rs"

[[example]]
name = "example-hyphen"
path = "examples/example-hyphen.rs"
