[package]
name = "feel-comfy-table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comfy-table = { workspace = true }

[[example]]
name = "comfy_table"
path = "examples/comfy_table.rs"

[[example]]
name = "hyphen-named"
path = "examples/hyphen-named.rs"
