[package]
name = "feel-momoa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib", "rlib"]
name = "momoa"

[dependencies]
thiserror = "1.0.39"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.5"

[dev-dependencies]
test-case = "3.0.0"
serde_json = "1"
glob = "0"
