[package]
name = "pest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = { workspace = true }
pest_derive = { workspace = true }
comfy-table = { workspace = true }

[[example]]
name = "pest"
path = "examples/pest.rs"
